other/rec-req/require-qos-guaranteed/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: require-qos-guaranteed
