other/rec-req/require-qos-guaranteed/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-qos-guaranteed
status:
  ready: true
