other/rec-req/require-qos-guaranteed/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-qos-guaranteed
policies:
- require-qos-guaranteed.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-qos-guaranteed
  resources:
  - badpod01
  - badpod02
  - badpod03
  result: fail
  rule: guaranteed
- kind: Pod
  policy: require-qos-guaranteed
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: guaranteed
